--- a/public/partials/link_form.html
+++ b/public/partials/link_form.html
@@ -1,6 +1,11 @@
 <div class='link-form'>
   <span id='spinner' us-spinner='{lines:6, length: 0, width: 15, radius: 12, color: "grey"}' ng-hide='doneLoading'></span>
-  <h1 class='link-form-title' ng-model='suggestedData.title'>{{suggestedData.title}}</h1>
+  <div class='link-form-section title-section'>
+    <h1 id='title-warning' ng-hide='!suggestedData.warning'>{{suggestedData.warning}}</h1>
+    <h2>Set Title:</h2>
+    <input id='link-form-title' type='text' value="{{suggestedData.title}}" 
+      add-title/>
+  </div>
   <div class='link-form-section'>
     <h2>Pick topics:</h2>
     <div class='link-form-tags-required' ng-show='linkForm.noTagsOnSubmit'>Hey there! Links are more helpful with topics. Add at least one.</div>
