add twitter button to each item in list

--- a/css/imports/components/_links.styl
+++ b/css/imports/components/_links.styl
@@ -19,6 +19,7 @@
           width 100%
           font-size 2rem
 
+
     h2
       a
         color $co-grey
@@ -27,6 +28,7 @@
         overflow hidden
 
     .meta-data
+      width 98%
       .categories-name
       .tags-name
         display inline-block
@@ -41,7 +43,6 @@
       .tags-name
         font $sans-xs
 
-
       .preview-logo
         display inline-block
         margin-left -10px
@@ -52,6 +53,10 @@
         &:hover
           cursor pointer
 
+      .twitter-share
+        display inline-block
+        float right
+        vertical-align middle
 
     .votes
       font-size 0
