adding styling for RAF navbar in mobile view

--- a/css/imports/components/_nav.styl
+++ b/css/imports/components/_nav.styl
@@ -60,9 +60,9 @@ nav
 
     div
       display block
-      position absolute
-      right 1px
-      bottom 0px
+      position relative
+      left 0px
+      top 8px
       width 76px
       margin 0 auto
       height 12px
