add more fixes to get twitter button on each item

--- a/public/partials/tag_view.html
+++ b/public/partials/tag_view.html
@@ -32,7 +32,7 @@
       <div class='categories-name' ng-repeat='category in link.categories'>{{category.name}}</div>
       <div class='tags-name' ng-repeat='tag in link.tags'><a ng-href='#/{{tag.name}}'> {{tag.name}}</a></div>
       <div class='twitter-share'>
-        <a href="https://twitter.com/share" class="twitter-share-button" data-url="{{link.link}}" data-text="{{link.text}}" data-via="readupcode" data-count="none" data-dnt="true">s</a>
+        <a href="https://twitter.com/share" class="twitter-share-button" data-url="{{link.link}}" data-text="{{link.text}}" data-via="readupcode" data-count="none" data-dnt="true">Tweet</a>
       </div>
     </div>
 
