took out optional word, though it's still optional

--- a/public/partials/link_form.html
+++ b/public/partials/link_form.html
@@ -17,7 +17,7 @@
     </div>
   </div>
   <div class='link-form-section'>
-    <h2>Pick type (optional):</h2>
+    <h2>Pick type:</h2>
       <div ng-repeat='type in types' class='tag' ng-click='toggleType(type)' ng-class='toggleClass(type, "type")'>{{type.name}}</div>
   </div>
   <div class="item-submit close" ng-click="send()">Add Link</div>
