--- a/public/partials/user_info_popover.html
+++ b/public/partials/user_info_popover.html
@@ -1,3 +1,4 @@
+<div class="popover-content">
 <button class="popover-close close" type="button" ng-click="dismiss()" aria-hidden="true">×</button>
 <div class="popover-text">
   <div class="user-stats">
@@ -5,4 +6,5 @@
     <p>Karma: {{currentUser.karma}}</p>
   </div>
   <div class="user-logout"><a href="_/logout">Logout</a></div>
+</div>
 </div>
