fix styling on share buttons by stacking them

--- a/css/imports/components/_links.styl
+++ b/css/imports/components/_links.styl
@@ -53,7 +53,7 @@
         &:hover
           cursor pointer
 
-      .twitter-share
+      .share
         display inline-block
         float right
         vertical-align middle
