make hacker news button show more consistently using setTimeout

--- a/css/imports/components/_links.styl
+++ b/css/imports/components/_links.styl
@@ -56,7 +56,7 @@
       .share
         display inline-block
         float right
-        vertical-align middle
+        vertical-align top
 
     .votes
       font-size 0
