add count to twitter share button

--- a/public/partials/tag_view.html
+++ b/public/partials/tag_view.html
@@ -37,7 +37,7 @@
           <a twitter href="https://twitter.com/share" class="twitter-share-button"
             data-url="{{link.link}}"
             data-text="{{link.title}}"
-            data-via="readupcode" data-count="none" data-dnt="true">
+            data-via="readupcode" data-dnt="true">
           </a>
         </div>
         <div class='hn-share'>
