fixed typo here so title has more room to breath

--- a/css/imports/components/_title.styl
+++ b/css/imports/components/_title.styl
@@ -6,7 +6,7 @@
 #homepage-title
   margin 0 auto
   text-align center
-  padding 0 30px
+  padding 0px 30px
   // width 60%
 
 #articles-title, #big-tags-title
@@ -17,9 +17,9 @@
   .title
     font $sans-l-bold
 
-    #homepage-title
-      margin 100px 0 60px
-      padding 0 80px
+  #homepage-title
+    margin 100px 0 60px
+    padding 0px 80px
 
   #articles-title
     width 63%
