updated user settings dropdown logout button hover effect

--- a/css/imports/components/_nav.styl
+++ b/css/imports/components/_nav.styl
@@ -99,7 +99,8 @@ nav
         background-color $ee-grey
         border-radius 2px
         &:hover
-          color $ho-grey
+          transition 0.3s ease
+          background-color $de-grey
         a
         &:visited
           color inherit
