changed karma to cred

--- a/public/partials/user_info_popover.html
+++ b/public/partials/user_info_popover.html
@@ -2,7 +2,7 @@
 <div class="popover-text">
   <div class="user-stats">
     <p>{{currentUser.username}}</p>
-    <p>Karma: {{currentUser.karma}}</p>
+    <p>Cred: {{currentUser.karma}}</p>
   </div>
   <div class="user-logout"><a href="_/logout">Logout</a></div>
 </div>
