have a tags inherit their parent div's size in the popovers

--- a/css/imports/components/_popover.styl
+++ b/css/imports/components/_popover.styl
@@ -23,6 +23,9 @@
   margin-left auto
   transition opacity .33s ease-in-out
   opacity .25
+  a
+    display block
+    height inherit
 
 .popover-github:hover
   opacity 1
