--- a/css/imports/components/_links.styl
+++ b/css/imports/components/_links.styl
@@ -12,7 +12,7 @@
         overflow hidden   /* "overflow" value must be different from "visible" */
         text-overflow ellipsis  // text-overflow ellipsis
         color $ho-grey
-        font $sans-s-light
+        font $sans-m
         a
           color $ho-grey
           font $sans-m
