fixes user page url

--- a/public/partials/tag_view.html
+++ b/public/partials/tag_view.html
@@ -30,7 +30,7 @@
     <h2><a ng-href="{{link.link}}">{{link.link}}</a></h2>
     <div class='meta-data'>
       <!-- <div class='preview-logo' show-frame></div> Former preview pane toggle button -->
-      <a href='/user/{{link.userid}}/submitted' class='user-submitted-name'>{{link.username}}</a>
+      <a href='/#/user/{{link.username}}/submitted' class='user-submitted-name'>{{link.username}}</a>
       <a class='read-later' ng-click='saveLinkToFavorites(link)'>Save For Later</a>
       <div class='categories-name' ng-repeat='category in link.categories'>{{category.name}}</div>
       <div class='tags-name' ng-repeat='tag in link.tags'><a ng-href='#/{{tag.name}}'> {{tag.name}}</a></div>
